--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,23 +1,16 @@
 .header {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 56px;
-	padding: 0;
-	background: #673AB7;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-	z-index: 50;
+	height: 100px;;
 }
 
 .header h1 {
 	float: left;
 	margin: 0;
 	padding: 0 15px;
-	font-size: 24px;
-	line-height: 56px;
+	font-size: 40px;
+	line-height: 100px;
 	font-weight: 400;
-	color: #FFF;
+	font-family: 'Courgette', 'Helvetica Neue', arial, sans-serif;;
+	color: #FFC107;
 }
 
 .header nav {
@@ -28,13 +21,13 @@
 .header nav a {
 	display: inline-block;
 	height: 56px;
-	line-height: 56px;
+	line-height: 100px;
 	padding: 0 15px;
 	min-width: 50px;
 	text-align: center;
 	background: rgba(255,255,255,0);
 	text-decoration: none;
-	color: #FFF;
+	color: #333;
 	will-change: background-color;
 }
 
