--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,5 +1,44 @@
 .home {
-	padding: 56px 20px;
-	min-height: 100%;
-	width: 100%;
+  padding: 56px 20px;
+  width: 100%;
+  display: flex;
+}
+
+.about {
+  display: flex;
+}
+
+.imageContainer {
+  flex: 1;
+}
+
+.image {
+  width: 100%;
+}
+
+.quote {
+  flex: 1;
+	display: flex;
+	flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("/assets/quotes.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.details{
+	font-family: "Lora", serif;
+	font-size: 32px;
+	font-style: italic;
+	padding-left: 32px;
+	text-align: center;
+	color: gray;
+	padding-bottom: 32px;
+}
+
+.author{
+	font-size: 20px;
+    color: black;
+
 }
