--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,7 +1,7 @@
 html, body {
 	height: 100%;
 	width: 100%;
-	padding: 0;
+	padding: 0 1vw;
 	margin: 0;
 	background: #FAFAFA;
 	font-family: 'Helvetica Neue', arial, sans-serif;
