--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -37,4 +37,9 @@ h2 {
 
 .preview {
   width: 50%;
+  line-height: 1.3;
+  color: #666;
+  max-height: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
