--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -20,14 +20,15 @@
 h2 {
   font-weight: 400;
   font-size: 24px;
+  margin: 48px 0 12px 0;
 }
 
 .tag {
-  padding: 8px;
+  padding: 4px 8px;
   margin-left: 8px;
   text-transform: lowercase;
   background-color: #ffdd037c;
-  border-radius: 8px;
+  border-radius: 5px;
   color: #999;
   font-size: 12px;
 }
@@ -40,7 +41,7 @@ h2 {
   width: 50%;
   line-height: 1.3;
   color: #666;
-  max-height: 40px;
+  max-height: 80px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
