loading font via style css

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Courgette&text=Jane%20Doe");
+@import url("https://fonts.googleapis.com/css?family=Lora&display=swap");
+
 html, body {
 	height: 100%;
 	width: 100%;
