--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -6,7 +6,7 @@
   position: relative;
   display: inline-block;
   font-weight: 500;
-  font-family: Lora,serif;
+  font-family: serif;
 }
 
 .pageTitle:after {
