--- a/src/routes/photographs/style.css
+++ b/src/routes/photographs/style.css
@@ -17,30 +17,11 @@
   border-bottom: 2px solid #FFC107;
 }
 
-h2 {
-  font-weight: 400;
-  font-size: 24px;
+.photo {
+  max-width: 100%;
 }
 
-.tag {
-  padding: 8px;
-  margin-left: 8px;
-  text-transform: lowercase;
-  background-color: #ffdd037c;
-  border-radius: 8px;
-  color: #999;
-  font-size: 12px;
-}
-
-.tag:first-child {
-  margin-left: 0px;
-}
-
-.preview {
-  width: 50%;
-  line-height: 1.3;
-  color: #666;
-  max-height: 40px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.caption {
+  font-weight: 300;
+  display: block;
 }
