--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -1,48 +1,15 @@
-.pageBlogs {
-  padding: 0 5%;
+.blogcontainer {
+  max-width: 728px;
+  width: 100%;
+  margin: 0 auto 10em;
+  line-height: 1.5;
 }
 
-.pageTitle {
-  position: relative;
-  display: inline-block;
+.blogtitle {
+  font-size: 1.8rem;
   font-weight: 500;
-  font-family: serif;
 }
 
-.pageTitle:after {
-  position: absolute;
-  bottom: -5px;
-  left: 0px;
-  content: '';
-  width: 75%;
-  border-bottom: 2px solid #FFC107;
-}
-
-h2 {
-  font-weight: 400;
-  font-size: 24px;
-  margin: 48px 0 12px 0;
-}
-
-.tag {
-  padding: 4px 8px;
-  margin-left: 8px;
-  text-transform: lowercase;
-  background-color: #ffdd037c;
-  border-radius: 5px;
-  color: #999;
-  font-size: 12px;
-}
-
-.tag:first-child {
-  margin-left: 0px;
-}
-
-.preview {
-  width: 50%;
-  line-height: 1.3;
-  color: #666;
-  max-height: 80px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.blogbody {
+  font-size: 1.2rem;
 }
