adding a contact form

--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -19,6 +19,11 @@
   max-width: 100%;
 }
 
+.blogbody code {
+  max-width: 100%;
+  overflow: scroll;
+}
+
 .blogsubtitle {
   color: #aaa;
   display: block;
