--- a/src/style/index.css
+++ b/src/style/index.css
@@ -26,3 +26,25 @@ a {
 	text-decoration: none;
 	color: #333;
 }
+
+.loading {
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+	animation-name: placeHolderShimmer;
+	animation-timing-function: linear;
+	background: #f6f7f9;
+	background-image: linear-gradient(to right, #f6f7f9 0%, #e9ebee 20%, #f6f7f9 40%, #f6f7f9 100%);
+	background-repeat: no-repeat;
+	background-size: 800px 104px;
+	position: relative;
+}
+
+@keyframes placeHolderShimmer{
+  0% {
+      background-position: -468px 0;
+  }
+  100% {
+      background-position: 468px 0;
+  }
+}
