--- a/src/routes/blogs/style.scss
+++ b/src/routes/blogs/style.scss
@@ -1,75 +1,81 @@
+.cover {
+	max-height: 165px;
+	object-fit: cover;
+	margin-top: 16px;
+
+}
+
 .pageBlogs {
-  padding: 0 5%;
+	padding: 0 5%;
 }
 
 .pageTitle {
-  position: relative;
-  display: inline-block;
-  font-weight: 500;
-  font-family: serif;
+	position: relative;
+	display: inline-block;
+	font-weight: 500;
+	font-family: serif;
 }
 
 .pageTitle:after {
-  position: absolute;
-  bottom: -5px;
-  left: 0px;
-  content: '';
-  width: 75%;
-  border-bottom: 2px solid #FFC107;
+	position: absolute;
+	bottom: -5px;
+	left: 0px;
+	content: '';
+	width: 75%;
+	border-bottom: 2px solid #FFC107;
 }
 
 h2 {
-  font-weight: 400;
-  font-size: 24px;
-  margin: 16px 0 12px 0;
+	font-weight: 400;
+	font-size: 24px;
+	margin: 16px 0 12px 0;
 }
 
 .tag {
-  padding: 4px 8px;
-  margin-left: 8px;
-  text-transform: lowercase;
-  background-color: #ffdd037c;
-  border-radius: 5px;
-  color: #999;
-  font-size: 12px;
+	padding: 4px 8px;
+	margin-left: 8px;
+	text-transform: lowercase;
+	background-color: #ffdd037c;
+	border-radius: 5px;
+	color: #999;
+	font-size: 12px;
 }
 
 .tag:first-child {
-  margin-left: 0px;
+	margin-left: 0px;
 }
 
 .preview {
-  width: 50%;
-  line-height: 1.3;
-  color: #666;
-  max-height: 80px;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	line-height: 1.3;
+	color: #666;
+	max-height: 80px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .loadingPlaceholder .blogtitle {
-  height: 24px;
+	height: 24px;
 }
 
 .loadingPlaceholder .loadingBody {
-  height: 12px;
-  margin-bottom: 8px;
+	height: 12px;
+	margin-bottom: 8px;
 }
 
 .loadingPlaceholder .loadingBody:nth-child(2) {
-  width: 90%;
+	width: 90%;
 }
 
 .loadingPlaceholder .loadingBody:nth-child(3) {
-  width: 80%;
+	width: 80%;
 }
 
 .loadingPlaceholder .loadingBody:nth-child(4) {
-  width: 65%;
+	width: 65%;
 }
 
 @media all and (max-width: 728px) {
-  .preview {
-    width: 100%;
-  }
+	.preview {
+		width: 100%;
+	}
 }
