Crawling technical debt fix

--- a/src/routes/blogs/style.scss
+++ b/src/routes/blogs/style.scss
@@ -1,8 +1,8 @@
 .cover {
 	max-height: 165px;
 	object-fit: cover;
-	margin-top: 16px;
-
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 
 .pageBlogs {
