--- a/src/routes/blogs/style.scss
+++ b/src/routes/blogs/style.scss
@@ -1,3 +1,5 @@
+@import '../../style/common';
+
 .cover {
   max-height: 165px;
   object-fit: cover;
@@ -19,9 +21,8 @@ h2 {
   padding: 4px 8px;
   margin-left: 8px;
   text-transform: lowercase;
-  background-color: #ffdd037c;
-  border-radius: 5px;
-  color: #999;
+  background-color: $my-color;
+  color: $black;
   font-size: 12px;
 }
 
@@ -60,6 +61,6 @@ h2 {
 
 @media all and (max-width: 728px) {
   .preview {
-    width: 100%;
+	width: 100%;
   }
 }
