--- a/content/templates/mail_template.html
+++ b/content/templates/mail_template.html
@@ -100,11 +100,15 @@
                  max-width: 100% !important;
                  width: auto !important;
              }
+
+             figcaption {
+                 text-align: center;
+             }
          }
         </style>
     </head>
     <body style="background-color: #f6f6f6; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
-        <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">A new blog post was just published to <a href="$url$">vanderfool.com</a>!</span>
+        <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">A new blog post was just published to <a href="$url$">vanderfool.com</a>! </span>
         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f6f6f6; width: 100%;" width="100%" bgcolor="#f6f6f6">
             <tr>
                 <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">&nbsp;</td>
@@ -117,6 +121,7 @@
                             <!-- START MAIN CONTENT AREA -->
                             <tr>
                                 <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px;" valign="top">
+                                    <span>A new blog post was just published to <a href="$url$">vanderfool.com</a>!</span>
                                     <h1>$title$</h1>
                                     <p>Date: $date$</p>
                                     <img src="$cover$"/>
